--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DFTech - Curso de Informática Básica</title>
 </head>
-<body>
-    Testando
+<body>git 
     <h1> Curso de Informática Básica </h1>
 </body>
 
