--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
      <li>Definição</li>
      <li>Evolução</li>
      <li>Tipos e características</li>
-     <ul>
+     <ul><br>
         <li>Classificação</li>
         <li>Estrutura</li>
         <li>modelos</li>
@@ -48,7 +48,7 @@
     var msg = "Seja Bem-Vido ao novo curso da DFTech, Hoje dia"
     const dataAtual = new Date()
     const dataFormatada = dataAtual.toLocaleDateString('pt-br')
-    alert(msg+" "+dataFormatada+" é um novo tempo na sua carreira")
+    alert(msg+" "+dataFormatada+" é um novo tempo na sua carreira.")
     console.log(msg+" "+dataFormatada)
     console.log(msg)
 </script>
