--- a/index.html
+++ b/index.html
@@ -11,13 +11,28 @@
     background-color: rgb(255, 255, 255)}
 
     #topo{ 
-    background-color:#f45326;
+    background-color: #F65314 
     width:100%;
     height:50px;
     }
 
-/*classe*/
 
+
+
+
+/*classe*/
+.azul{
+    color:blue
+}
+
+.verde{
+    color:#F65314 
+}
+.card{
+    width:100%;
+    height: 130px;px;
+    border: solid 3px #F65314 
+}
 
     </style>
 </head>
@@ -126,8 +141,13 @@
 				</ol>
 		</ol>	
  
+<!--Cartões usando a teoria do Flow-->
+<div class="card">
 
+   <p>Os fundamentos de hardware são os componentes físicos e equipamentos utilizados para construir um sistema computacional ou dispositivo eletrônico. Isso inclui a placa-mãe, processador, memória RAM, disco rígido, placa de vídeo, fonte de alimentação e periféricos. Esses componentes trabalham juntos para permitir que o sistema execute suas funções e realize tarefas. Em resumo, o hardware é a parte física do sistema, enquanto o software é a parte lógica que é executada pelo hardware.</p>
 
+</div>
+<div cass="topo"></div>
 
  </ul>
     
