--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 .menu {
   width: 100%;
   height: 60px;
-  background-color: #222222;
+  background-color: #2e2e2e;
   font-family: Roboto;
   box-shadow: 0px 0px 100px 5px;
 }
@@ -86,7 +86,7 @@
 .menu a {
   padding: 12.5px;
   display: block;
-  text-decoration: overline ;
+  text-decoration: none ;
   color: #ffffff;
 }
 
@@ -108,7 +108,7 @@
 
 .menu ul ul a:hover {
   transition: all 1.9s ease;
-  background-color: #262626;
+  background-color: #252525;
   color: rgb(255, 255, 255);
 }
 
@@ -118,7 +118,7 @@
 }
 
 .menu ul ul li {
-  background-color: #1a1a1a;
+  background-color: #222222;
 }
 
 .menu ul ul a {
@@ -164,7 +164,7 @@
 
     <h1 style="color:#4285F4;" >Curso de Informática Básica </h1> 
 
-    <p1>Nesse curso você vai aprender os fundamentos de hardware,software,redes,github,</p1>
+    <p1>Nesse curso você vai aprender os fundamentos de hardware,software,redes,github e outras funcionalidades.</p1>
 
 
     <h2 style="color:#7CBB00"> Conteúdo Programático</h2>
@@ -319,7 +319,7 @@
 	<ol>
 		<li>Diretórios</li>
 	</ol>
-			<li>Categorias de software se referem a diferentes tipos de programas de computador que são projetados para desempenhar funções específicas. As principais categorias incluem</li>
+			<li>Categorias de software se referem a diferentes tipos de programas de computador que são projetados para desempenhar funções específicas. As principais categorias incluem:</li>
 				<ol><br>
 					
 
@@ -336,6 +336,27 @@
    <li>Software de jogos:</li>
    projetado para entreter o usuário com gráficos avançados e recursos de som e interação.</ol>
 
+   
+	
+<br> 2. Conceitos <br>
+
+<p><li>Software</li> 
+Conjunto de programas que controlam um dispositivo eletrônico.
+<li>Sistema Operacional</li> 
+Software que gerencia recursos de hardware e software.
+<li>Aplicativo</li>
+Software que executa uma tarefa específica para o usuário.
+<li>Firmware</li>
+Software embutido em dispositivos eletrônicos.
+<li>Biblioteca de Software</li>
+ Coleção de código pré-escrito para desenvolver programas.
+ <li>Open Source</li>
+Software com código aberto para visualização, modificação e distribuição.
+
+<br><p>3. Aplicações <br>
+</p> 
+<p> Aplicações de software são programas de computador projetados para realizar tarefas específicas, como processamento de texto, edição de imagens, gerenciamento de banco de dados ou navegação na web. Eles são desenvolvidos para serem executados em sistemas operacionais específicos e podem ser instalados em dispositivos como computadores pessoais, smartphones e tablets. As aplicações de software geralmente são desenvolvidas para atender às necessidades específicas dos usuários e das empresas e podem ser projetadas para serem usadas localmente ou na nuvem. Elas são uma parte fundamental da tecnologia moderna e são essenciais para realizar uma ampla variedade de tarefas em muitas áreas da vida pessoal e profissional.
+	
 
 
 
